[package]
name = "harvester-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
sqlx = { version = "0.8.0", features = ["runtime-tokio", "runtime-tokio-rustls", "postgres", "derive", "uuid", "json", ] }
axum = "0.7.5"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
tokio = { version = "1.39.2", features = ["full"] }
tower = "0.4.13"
uuid = { version = "1.10.0", features = ["v4", "fast-rng", "macro-diagnostics", "serde"] }
